...
            android:layout_marginTop="15dp"
            android:text="Địa chỉ email của bạn"
            android:textStyle="bold"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="33dp"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="5dp"
            android:paddingVertical="10dp"
            android:textSize="12sp"
            android:background="@drawable/custom_edittext" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:layout_marginTop="5dp"
            app:backgroundTint="#006ECB"
            app:cornerRadius="5dp"
...
