...
                android:layout_marginRight="10dp"
                android:layout_gravity="center"
                android:src="@drawable/hide_eye"/>
        </LinearLayout>

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_edittext"
            android:minHeight="33dp"
            android:paddingHorizontal="5dp"
...
