...
                android:src="@drawable/ic_back_arrow_xml"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editPreferredDest1"
                android:layout_width="0dp"
                android:layout_height="37dp"
                android:inputType="textAutoComplete"
                android:layout_marginStart="8dp"
                android:background="@drawable/edit_background"
                android:hint="Preferred Destination"
...
            <TextView
                android:id="@+id/suggestedPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:text="Suggested Places"
                app:layout_constraintBottom_toTopOf="@+id/recyclerView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
...
