...
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/desInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_background"
        android:hint="Preferred Destination"
        android:paddingLeft="20dp"
...
